--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="text" placeholder="🚪 Session Name" id="sessionName">
         <input type="text" placeholder="🔑 Session Passcode" id="sessionPasscode">
         <button onClick="getSignature()" class="primary" id="getSignature">Join Session</button>
-        <small class="zoom">Powered by the <a href="https://marketplace.zoom.us/docs/sdk/video/introduction/" target="_blank">Zoom Video SDK</a></small>
+        <small class="zoom">Powered by the <a href="https://developers.zoom.us/docs/video-sdk/" target="_blank">Zoom Video SDK</a></small>
       </div>
 
       <div id="session">
@@ -43,7 +43,7 @@
       </div>
     </main>
 
-    <script src="https://source.zoom.us/videosdk/zoom-video-1.7.5.min.js"></script>
+    <script src="https://source.zoom.us/videosdk/zoom-video-1.7.7.min.js"></script>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
 </html>
